# openswindle

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/openswindle/: __init__.py  api.py  benchmark.py  config.py  engine.py  fairness.py  models.py  probability.py  store.py  telemetry.py
src/openswindle/npc/: generator.py  llm.py  scripted.py
tests/: conftest.py  test_api.py  test_benchmark.py  test_engine.py  test_fairness.py  test_llm_layer.py  test_npc.py  test_probability.py  test_simulation.py  test_store.py
