[project]
name = "openswindle"
version = "0.1.0"
description = "Authoritative FastAPI backend for OpenSwindle, an open-source implementation of the Swindlestones d4 bluffing game."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "arkanine1000", email = "sunk@questfi.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "litellm>=1.84",
]

[project.scripts]
openswindle-benchmark = "openswindle.benchmark:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"
